--- a/source_working/WebPage_F4/WebPage_F4/Web.config
+++ b/source_working/WebPage_F4/WebPage_F4/Web.config
@@ -1,29 +1,23 @@
 ﻿<?xml version="1.0"?>
-
 <configuration>
-
-
-  
-    <appSettings/>
-    <connectionStrings/>
-  
-    <system.web>
-        <!-- 
+	<appSettings/>
+	<connectionStrings/>
+	<system.web>
+		<!-- 
             Set compilation debug="true" to insert debugging 
             symbols into the compiled page. Because this 
             affects performance, set this value to true only 
             during development.
         -->
-        <compilation debug="false">
-
-        </compilation>
-        <!--
+		<compilation debug="true">
+		</compilation>
+		<!--
             The <authentication> section enables configuration 
             of the security authentication mode used by 
             ASP.NET to identify an incoming user. 
         -->
-        <authentication mode="Windows" />
-        <!--
+		<authentication mode="Windows"/>
+		<!--
             The <customErrors> section enables configuration 
             of what to do if/when an unhandled error occurs 
             during the execution of a request. Specifically, 
@@ -35,7 +29,5 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
         -->
-
-    </system.web>
-
+	</system.web>
 </configuration>
