--- a/source_working/WebPage_F4/WebPage_F4/WebPage_F4.csproj
+++ b/source_working/WebPage_F4/WebPage_F4/WebPage_F4.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{88B63DE7-4BBA-4BC9-8E18-8C8C0FC1A5A0}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
@@ -126,6 +126,20 @@
     <Compile Include="UserControl\uc_Header.ascx.designer.cs">
       <DependentUpon>uc_Header.ascx</DependentUpon>
     </Compile>
+    <Compile Include="UserControl\uc_Register_Nguoi_Tim_Viec.ascx.cs">
+      <DependentUpon>uc_Register_Nguoi_Tim_Viec.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserControl\uc_Register_Nguoi_Tim_Viec.ascx.designer.cs">
+      <DependentUpon>uc_Register_Nguoi_Tim_Viec.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="CamNangNghe.aspx" />
@@ -161,6 +175,8 @@
     <Content Include="TaoHoSo.aspx" />
     <Content Include="TạoThongBaoViec.aspx" />
     <Content Include="UserControl\uc_FormDangKiNhaTuyenDung.ascx" />
+    <Content Include="UserControl\uc_Register_Nguoi_Tim_Viec.ascx" />
+    <Content Include="WebForm1.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -186,6 +202,9 @@
           <IISUrl>
           </IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
+          <UseCustomServer>False</UseCustomServer>
+          <CustomServerUrl>
+          </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
