--- a/source_working/source_working/WebPage_F4/WebPage_F4/WebPage_F4.csproj
+++ b/source_working/source_working/WebPage_F4/WebPage_F4/WebPage_F4.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{88B63DE7-4BBA-4BC9-8E18-8C8C0FC1A5A0}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
@@ -127,7 +127,7 @@
     <Compile Include="DAO\NhaTuyenDungLuuCVDAO.cs" />
     <Compile Include="DAO\QuangCaoDAO.cs" />
     <Compile Include="DAO\QuocGiaDAO.cs" />
-    <Compile Include="DAO\SQLServerConnecter.cs" />
+    <Compile Include="DAO\SqlDataAccess.cs" />
     <Compile Include="DAO\TinHocDAO.cs" />
     <Compile Include="DAO\TinhThanhDAO.cs" />
     <Compile Include="DAO\TinTuyenDungDAO.cs" />
@@ -367,9 +367,6 @@
           <IISUrl>
           </IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
-          <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
